# boot-pyproject

./: .coveragerc  .gitignore  .noserc  .travis.yml  README.md  config_project.json  config_project.yaml  pyproject.toml  setup.py  tox.ini
boot_pyproject/: app.py  create_setup_file.py  metadata.py
boot_pyproject/tests/: test_app.py  test_create_setup_file.py
pyprojectgen/: app.py  metadata.py
pyprojectgen/generator/: license.py  metadata.py  noserc.py  project.py  structure.py  toxfile.py
pyprojectgen/scripts/: app.py
pyprojectgen/tests/: test_create_setup_file.py
scripts/: generate_project.py  generate_template.py  generate_yaml.py
src/: create_setup_file.py  license_generator.py  license_templates.py  metadata.py  metadata_generator.py  project_config.py  project_generator.py  project_structure_generator.py  readme_generator.py  setup_generator.py  template_builder.py
tests/: test_app.py  test_create_setup_file.py  test_helpers.py  test_project_config.py  test_project_generator.py  test_template_builder.py
