[tool.poetry]
name = "pyprojectgen"
version = "0.1.0"
description = "Tool for generating the skeleton for a Python project"
authors = ["Mats Jalas <mats.jalas@gmail.com>"]
readme = 'README.md'
license = "GNU GPLv3"
repository = "https://github.com/mjalas/pyprojectgen"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
]

[tool.poetry.dependencies]
python = "^3.7"
PyYaml = "^3.11"

[tool.poetry.dev-dependencies]
nose = "^1.0"
coverage = "^4.0.3"
taskipy = "^1.5.1"
flake8 = "^3.8.4"
tox = "^3.20.1"
pytest = "^6.2.1"
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
generate-project = 'scripts.generate_project:main'

[tool.taskipy.tasks]
test = "python -m unittest tests/test_*.py"
lint = "pylint tests taskipy"
tox = "tox"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

